# python-task-template-repository

./: .gitignore  .pre-commit-config.yaml  .template-sync.yml  INSTRUCTIONS.md  pyproject.toml  todo.md
.gemini/: config.yaml  styleguide.md
.github/: README.md  pull_request_template.md
.github/scripts/: ci_report.py
.github/workflows/: tests.yml
_template_pip_guard/: __init__.py
